# tbot

./: .babelrc  .dockerignore  .gitignore  404.html  Dockerfile  LICENSE  README.md  create.sql  index.html  package-lock.json  package.json  postcss.config.cjs  pyproject.toml  requirements.txt  run_tests.py  setup.py  sitemap.xml  tbot.yaml  tsconfig.json  vite.config.ts  webpack.config.js
.github/: copilot-instructions.md
.github/workflows/: build.yml  doc-deploy.yml
assets/js/: 0428ee79.7c3324de.js  0428ee79.8981609d.js  067a9fc2.9e138604.js  067a9fc2.c2ffe7b8.js  069de387.9c4f5b6d.js  069de387.beee7a01.js  0a657f9d.0c48acd8.js  0a657f9d.a139640a.js  17896441.b1055963.js  17896441.f75db895.js  1950a38f.876eb9e4.js  1950a38f.c77c85eb.js  1be78505.404d0c1c.js  1be78505.d7d7bf1f.js  3ea47e0e.bf02d1d8.js  3ea47e0e.f8f33204.js  486.e9517f6b.js  52933935.c723a8ec.js  52933935.ea88edfe.js  573b8472.0aedc508.js  573b8472.8b78f442.js  608.abb46c25.js  69199a73.acae0b8e.js  69199a73.c2a9658a.js  69199a73.f80ae634.js  75.cad638bb.js  90f21d3b.72b227b6.js  90f21d3b.c85761f4.js  919c0ab3.20d356f8.js  919c0ab3.6af47f8b.js  935f2afb.74bf420d.js  935f2afb.92861fad.js  935f2afb.d3e41cbd.js  97e7f860.1cccda40.js  97e7f860.6136d36d.js  99e27fc4.1249d9b9.js  9e4087bc.fb13e37f.js  acb40ecd.25cc0747.js  acb40ecd.68b0522b.js  b2f554cd.2d0620fd.js  (+27 more)
blog/: atom.xml  feed.xml  index.html
blog/archive/: index.html
css/: main.css
docker-dev/tbot/: docker-compose.yaml  nginx.conf
docs/: doc1.html  doc2.html  doc3.html  doc5.html  package.json
docs/accountage/: index.html
docs/alias/: index.html
docs/chat_stats/: index.html
docs/cmd_manager/: index.html
docs/countdown/: index.html
docs/doc2/: index.html
docs/doc4/: index.html
docs/doc5/: index.html
docs/docs/: countdown.md  faceit.md  game.md  lol.md  quotes.md
docs/faceit/: index.html
docs/followage/: index.html
docs/gambling/: index.html
docs/game/: index.html
docs/general/: index.html
docs/lol/: index.html
docs/permit_manager/: index.html
docs/points/: index.html
docs/quotes/: index.html
docs/random-number/: index.html
docs/spotify/: index.html
docs/static/: CNAME
docs/tft/: index.html
docs/time/: index.html
docs/title/: index.html
docs/uptime/: index.html
docs/user_queue/: index.html
docs/user_streams/: index.html
docs/vars/: chatstats.html  general.html  index.html  user_streams.html
docs/weather/: index.html
en/: index.html  users.html
en/help/: index.html
en/users/: index.html
help/: index.html
src/: constants.tsx  main.tsx  routes.tsx  theme.css
src/components/: error-box.tsx  logo.tsx  page-loader.tsx  shell.tsx  time-counter.tsx
src/types/: access-level.type.ts  page-cursor.ts  provider.type.ts  provider.type.tsx
src/utils/: api.tsx  date.ts  page-records.ts  toast.ts
tbot/: __init__.py  command.py  config.py  constants.py  db.py  dev_server.py  irc.py  logger.py  runner.py  testbase.py  utils.py  web.py
tbot/commands/: __init__.py  better_uptime.py  chat_stats.py  cmd_bot.py  stream_uptime.py  streams_in_a_row.py  user_stream_watchtime.py
tbot/discord_bot/: __init__.py  bot.py  bot_main.py  custom_notification.py  db.py  twitch_sync.py  var_filler.py
tbot/irc/: __init__.py  badge_log.py  bot.py  bot_main.py  command.py  sub_log.py
tbot/migrations/: 20190125_01_00zOx-init.py  20190126_01_zvBuo-twitch-user-chat-deleted-counter.py  20200818_01_A601F-gambling.py  (+25 more)
tbot2/: __init__.py  auth_backend.py  config_settings.py  conftest.py  constants.py  contexts.py  database.py  dependecies.py  dev_server.py  exceptions.py  main.py  runner.py  setup_logger.py  testbase.py
ui/: index.html  vite.config.ts
users/: index.html
vars/: accountage.html  alias.html  chat_stats.html  chatstats.html  cmd_manager.html  faceit.html  followage.html  gambling.html  game.html  general.html  lol.html  permit_manager.html  spotify.html  tft.html  time.html  title.html  uptime.html  user_queue.html  user_streams.html  weather.html
(+1401 files in other folders)
