[project]
name = "tbot2"
version = "2.0"
requires-python = ">=3.13"
description = "Twitch, Discord and YouTube bot"
dependencies = [
    "fastapi==0.115.12",
    "sqlalchemy==2.0.40",
    "yaml-settings-pydantic==2.3.2",
    "pydantic[email]==2.11.4",
    "redis==5.2.1",
    "httpx[http2]==0.28.1",
    "httpx_auth==0.23.1",
    "authlib==1.5.2",
    "uvicorn[standard]==0.34.2",
    "arq==0.26.3",
    "asyncmy==0.2.10",
    "alembic==1.15.2",
    "uuid6==2024.7.10",
    "humanize==4.12.3",
    "python-dateutil==2.9.0.post0",
    "sqlakeyset==2.0.1739066250",
    "PyJWT==2.10.1",
    "PyMySQL==1.1.1",
    "more_itertools==10.7.0",
    "async-lru==2.0.5",
    "click==8.1.8",
    "pytz>=2025.2",
    "unidecode>=1.4.0",
    "loguru>=0.7.3",
    "orjson>=3.10.18",
    "sentry-sdk[fastapi,loguru]==2.27.0",
    "httpx-retries>=0.3.2",
    "tiktoklive==6.5.1.post1",
    "betterproto==2.0.0b7",
]

[project.optional-dependencies]
dev = [
    "honcho==2.0.0",
    "pytest-httpx==0.35.0",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "pytest-mock==3.14.0",
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core>=3.2,<4"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "I", "FAST", "ANN"]
ignore = ['ANN401']

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
